loging logout logic?

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,21 @@ code {
   font-size: 14px;
   font-weight: 700;
 }
+
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 250ms ease-in;
+}
+
+.fill {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
